@@ -3,6 +3,9 @@
 * src/configure.ac: Fix recently-introduced issue with building SDL/Windows -
   adding SDL flags to CFLAGS must be done after all AC_CHECK_FUNCS tests but
   before the OpenGL check.
+* src/sdl/main.c: Fix Windows/SDL crash when the console window is closed by
+  user, by servicing console-sourced signals. The crash was due to the audio
+  subsystem not being closed properly.
 
 2011-04-13  Tomasz Krasuski <kr0tki@poczta.onet.pl>
 * src/atari.c: Fix bug introduced at 04-09 with atari.c not compiling when
